--- a/src/Makefile.gen
+++ b/src/Makefile.gen
@@ -14,16 +14,11 @@ MANPATH = /usr/share/man
 INC_DIRS = -I/usr/local/include
 LIB_DIRS = -L/usr/local/lib
 
-# Native language support
-# CFLAGS += -DENABLE_NLS
-# INSTALL_RULES += install_nls
-# NLSPATH = $(PREFIX)/share/nls
-
 # C compiler flags
 CFLAGS += -O2
 
 # Debug C compiler flags (uncomment for debug build)
-# DEBUG_CFLAGS = -O0 -g -Wuninitialized -Wunused-variable -DDEBUG
+#DEBUG_CFLAGS = -O0 -g -Wall -Wfatal-errors -Wuninitialized -Wunused-variable -DDEBUG
 
 # Linker flags
 LDFLAGS += -pthread
