--- a/mf/Makefile.SunOS
+++ b/mf/Makefile.SunOS
@@ -1,5 +1,5 @@
 # -----------------------------------------------------------------------------
-# Copyright (C) 2012-2024 alx@fastestcode.org
+# Copyright (C) 2012-2025 alx@fastestcode.org
 # This software is distributed under the terms of the MIT license.
 # See the included LICENSE file for further information.
 # -----------------------------------------------------------------------------
@@ -17,9 +17,8 @@ IPC_OBJS = xipc.o
 include common.mf
 
 install:
-	install -m 775 -f $(PREFIX)/bin ximaging
-	install -m 664 -f $(MANDIR)/man1 ximaging.1
-	# While Tribblix packages Motif with no Xft
-	sed '/renderTable/d' XImaging.ad > XImaging
-	install -m 664 -f $(APPLRESDIR) XImaging
+	cp XImaging.ad XImaging
+	install -m 755 -f $(PREFIX)/bin ximaging
+	install -m 644 -f $(MANDIR)/man1 ximaging.1
+	install -m 644 -f $(APPLRESDIR) XImaging
 	rm XImaging
